--- a/lamp_ubuntu1804/vars/default.yml
+++ b/lamp_ubuntu1804/vars/default.yml
@@ -1,6 +1,6 @@
 ---
-mysql_root_password: "mysql_root_password"
-app_user: "sammy"
+mysql_root_password: "Subash10"
+app_user: "subash"
 http_host: "your_domain"
 http_conf: "your_domain.conf"
 http_port: "80"
