--- a/lamp_ubuntu1804/vars/default.yml
+++ b/lamp_ubuntu1804/vars/default.yml
@@ -1,6 +1,6 @@
 ---
 mysql_root_password: "Subash10"
-app_user: "subash"
+app_user: "ubuntu"
 http_host: "your_domain"
 http_conf: "your_domain.conf"
 http_port: "80"
